# termshot

./: README.md  pyproject.toml
examples/: basic_usage.py
termshot/: __init__.py  cli.py  emulator.py  renderer.py  runner.py  screenshotter.py  themes.py
