[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termshot"
version = "0.1.0"
description = "Capture CLI tool output as PNG screenshots"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "termshot contributors" }
]
keywords = ["terminal", "screenshot", "cli", "pty", "ansi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "pyte>=0.8.1",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
termshot = "termshot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["termshot"]
